OpenSceneGraph added as third party library

--- a/interface/CMakeLists.txt
+++ b/interface/CMakeLists.txt
@@ -1,5 +1,15 @@
 set(EXEC_NAME P1RV-fusee-interface)
 
+cmake_minimum_required (VERSION 3.8) 
+
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
+
+set(CMAKE_MODULE_PATH /usr/share/cmake-3.13/Modules)
+
+find_package(OpenSceneGraph REQUIRED COMPONENTS osg OpenThreads osgDB osgUtil osgGA osgViewer)
+
+include_directories(${OPENSCENEGRAPH_INCLUDE_DIRS})
+
 add_executable(
   ${EXEC_NAME}
   interface.cpp
@@ -10,4 +20,5 @@ target_link_libraries(${EXEC_NAME}
   pthread
   rt
   GL
-  glut)
+  glut
+  ${OPENSCENEGRAPH_LIBRARIES})
