FIRST TAKE OFF DRIVEN WITH ARDUINO

--- a/simulator/arduino/my_arduino_layer/CMakeLists.txt
+++ b/simulator/arduino/my_arduino_layer/CMakeLists.txt
@@ -4,7 +4,9 @@ include(CTest)
 enable_testing()
 
 add_library(P1RV-fusee-arduino-layer 
-  serial/myserial.cpp)
+  serial/myserial.cpp
+  rocket-booster/ideal-booster/ideal-booster.cpp
+  sensors/height-sensor/height-sensor.cpp)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
