generic dynamic model interface

--- a/interface/CMakeLists.txt
+++ b/interface/CMakeLists.txt
@@ -4,9 +4,12 @@ cmake_minimum_required (VERSION 3.8)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
-set(CMAKE_MODULE_PATH /usr/share/cmake-3.13/Modules)
+set(CMAKE_MODULE_PATH /usr/share/cmake-3.13/Modules ~/developpement/OpenSceneGraph/CMakeModules)
 
-find_package(OpenSceneGraph REQUIRED COMPONENTS osg OpenThreads osgDB osgUtil osgGA osgViewer)
+find_package(OpenThreads)
+find_package(osg)
+
+find_package(OpenSceneGraph REQUIRED OpenThreads osg osgGA osgDB osgText osgViewer)
 
 include_directories(${OPENSCENEGRAPH_INCLUDE_DIRS})
 
@@ -15,10 +18,8 @@ add_executable(
   interface.cpp
 )
 
-link_directories("~/developpement/OpenSceneGraph/build/lib/osgPlugins-3.7.0")
-
 add_library(testlib SHARED IMPORTED)
- set_property(TARGET testlib PROPERTY IMPORTED_LOCATION "~/developpement/OpenSceneGraph/build/lib/osgPlugins-3.7.0/osgdb_stld.so")
+set_property(TARGET testlib PROPERTY IMPORTED_LOCATION "~/developpement/OpenSceneGraph/build/lib/osgPlugins-3.7.0/osgdb_stld.so")
 
 
 target_link_libraries(${EXEC_NAME} 
@@ -28,5 +29,4 @@ target_link_libraries(${EXEC_NAME}
   GL
   glut
   ${OPENSCENEGRAPH_LIBRARIES}
-  osgdb_stld
-  osgText)
+  osgdb_stld)
