--- a/simulator/arduino/CMakeLists.txt
+++ b/simulator/arduino/CMakeLists.txt
@@ -1,11 +1,14 @@
 set(LIB_NAME P1RV-fusee-arduino-main)
 
+execute_process(COMMAND cp ${CMAKE_CURRENT_SOURCE_DIR}/fusee/fusee.ino ${CMAKE_CURRENT_SOURCE_DIR}/P1RV-fusee-arduino-code.cpp)
+
+add_definitions(${ARDUINO_CODE_LIB} -DSIM)
+
 add_library(
   ${LIB_NAME}
-arduinomain.cpp
-)
+  arduinomain.cpp
+  P1RV-fusee-arduino-code.cpp)
 
-add_subdirectory(fusee)
+target_link_libraries(${LIB_NAME})
+
 add_subdirectory(my_arduino_layer)
-
-
